--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,15 @@
+#TODO add versioning for dependecies
+
 django
+
 djangorestframework
+
+psycopg2
 
 psycopg2-binary
 
-pyjwt >=1.7.1,<1.7.2
+pyjwt>=1.7.1,<1.7.2
 
 gunicorn==19.9.0
+
+pillow
